--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -10,6 +10,9 @@ gem 'jquery-rails',   '4.2.2'
 gem 'turbolinks',     '5.0.1'
 gem 'jbuilder',       '2.6.1'
 gem 'bootstrap-sass', '~> 3.3.6'
+gem 'faker'
+gem 'will_paginate'
+gem 'bootstrap-will_paginate'
 
 group :development, :test do
   gem 'sqlite3',  '1.3.13'
