--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -6,7 +6,7 @@ gem 'puma',           '3.6.2'
 gem 'sass-rails',     '~> 5.0'
 gem 'uglifier',       '3.0.4'
 gem 'coffee-rails',   '4.2.1'
-gem 'jquery-rails',   '4.2.2'
+gem 'jquery-rails'
 gem 'turbolinks',     '5.0.1'
 gem 'jbuilder',       '2.6.1'
 gem 'bootstrap-sass', '~> 3.3.6'
