--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -13,6 +13,9 @@ gem 'bootstrap-sass', '~> 3.3.6'
 gem 'faker'
 gem 'will_paginate'
 gem 'bootstrap-will_paginate'
+gem 'carrierwave'
+gem 'mini_magick'
+gem 'fog'
 
 group :development, :test do
   gem 'sqlite3',  '1.3.13'
