--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -16,6 +16,8 @@ gem 'bootstrap-will_paginate'
 gem 'carrierwave'
 gem 'mini_magick'
 gem 'fog'
+gem 'elasticsearch-model'
+gem 'elasticsearch-rails'
 
 group :development, :test do
   gem 'sqlite3',  '1.3.13'
