--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -18,6 +18,7 @@ gem 'mini_magick'
 gem 'fog'
 gem 'elasticsearch-model'
 gem 'elasticsearch-rails'
+gem 'pusher'
 
 group :development, :test do
   gem 'sqlite3',  '1.3.13'
